using built in repl features instead of my hack

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "author":"Adam Tindale",
   "version": "0.1.1",
   "dependencies": {
-    "flocking": "colinbdclark/flocking#midi-improvements"
+    "flocking": "colinbdclark/flocking"
   }
 }
